<resources>
    <string name="app_name">AndHuber</string>
    <string name="edt_login_username">UserName</string>
    <string name="edt_login_password">Password</string>
    <string name="ck_login_auto">自动登录</string>
    <string name="btn_login_login">登录</string>
    <string name="wait_to_login">等待登录</string>
    <string name="authenticate">二步验证</string>
    <string name="confirm">确认</string>
    <string name="two_factor_hint">请输入二步验证码</string>
    <string name="tab_1_repositories">Repositories</string>
    <string name="tab_2_starred">Starred</string>
    <string name="tab_3_messages">Messages</string>
    <string name="getting_information">正在获取数据</string>
    <string name="getting_user_info">正在获取用户信息</string>
    <string name="starred">Starred</string>
    <string name="forked">Forked</string>
    <string name="download">Download</string>
    <string name="to">to</string>
    <string name="search_repo_or_user">搜索仓库或用户</string>
    <string name="org">Org</string>
    <string name="blog">Blog</string>
    <string name="email">Email</string>
    <string name="menu_message">消息</string>
    <string name="setting">设置</string>
    <string name="getting_repository">正在获取仓库</string>
    <string name="getting_star">正在获取收藏</string>
    <string name="logout">登出</string>
    <string name="user">账户</string>
    <string name="click_to_search">点击弹出搜索</string>
    <string name="input_keyword">输入搜索关键字</string>
    <string name="setting_assist">辅助功能</string>
    <string name="search_service">搜索服务</string>
    <string name="search_service_summary">通知栏常驻快捷搜索</string>
    <string name="search_for_repos">搜索仓库</string>
    <string name="search_for_user">搜索用户</string>
    <string name="searching">正在搜索</string>
    <string name="key_logout">logout</string>
    <string name="key_search_service">search_service</string>
    <string name="ReadMe">ReadMe</string>
    <string name="view_readMe">查看ReadMe</string>
    <string name="ck_remember_password">记住密码</string>
    <string name="load_success">加载成功</string>
    <string name="load_failed">加载失败</string>
    <string name="load_to_bottom">已至最后一页</string>
    <string name="authorization_failed">身份验证失败</string>
    <string name="search_result_count">搜索到结果数量:</string>
    <string name="star_info_error">数据有误，禁止操作</string>
    <string name="star_success">收藏成功</string>
    <string name="star_failed">收藏失败</string>
    <string name="getting_file_content">正在获取文件内容</string>
    <string name="doing_star">正在收藏</string>
    <string name="undo_star">取消收藏</string>
    <string name="undo_star_failed">取消收藏失败</string>
    <string name="getting_files">正在获取文件</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_blog">Blog</string>
    <string name="label_company">Company</string>
    <string name="label_location">Location</string>
    <string name="label_hireable">Hireable</string>
    <string name="label_bio">Bio</string>
    <string name="saving_user_info">正在保存用户信息</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="transition_head">transition_head</string>
    <string name="no_access_to_edit_other_profile">无权修改他人信息</string>
    <string name="fork_success">Fork成功</string>
    <string name="getting_commits">正在获取commit数据</string>
    <string name="tab_1_diff">Diff</string>
    <string name="tab_2_comment">Comment</string>
    <string name="input_comment">添加评论</string>
    <string name="submit">提交</string>
    <string name="submit_comment">正在提交评论</string>
    <string name="comment_edit">编辑评论</string>
    <string name="comment_delete">删除评论</string>
</resources>
