<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_logo_margin_bottom"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/github_mark" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_login_username"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_login_logo"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_login_username"
            android:maxLines="1"
            android:textColor="@color/light_black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_login_password"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_login_username"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_login_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/light_black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/ck_remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_login_login"
        android:layout_alignBottom="@+id/btn_login_login"
        android:layout_alignLeft="@+id/layout_login_password"
        android:layout_alignStart="@+id/layout_login_password"
        android:text="@string/ck_remember_password"
        android:textColor="@color/light_black" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/ck_login_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_login_login"
        android:layout_alignBottom="@+id/btn_login_login"
        android:layout_toEndOf="@+id/ck_remember_password"
        android:layout_toRightOf="@+id/ck_remember_password"
        android:text="@string/ck_login_auto"
        android:textColor="@color/light_black" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/layout_login_password"
        android:layout_alignRight="@+id/layout_login_password"
        android:layout_below="@+id/layout_login_password"
        android:background="@color/colorAccent"
        android:text="@string/btn_login_login"
        android:textColor="@color/white" />
</RelativeLayout>
